# bands

./: LICENSE  README.md  pyproject.toml
examples/demo-band/.bands/: CLAUDE.md  bands.json
examples/demo-band/.bands/boardroom/: CLAUDE.md
examples/demo-band/.bands/boardroom/minutes/: 2026-06-15-launch-week-kickoff.md
examples/demo-band/.bands/breakroom/: CLAUDE.md
examples/demo-band/.bands/commons/: activity.md  ceo-directives.md  mail-log.json
examples/demo-band/.bands/commons/sprint/: NORTH_STAR.md
examples/demo-band/.bands/lobby/: CLAUDE.md
examples/demo-band/.bands/suites/marcus-cmo/: AGENTS.md  CLAUDE.md  HEARTBEAT.md  marcus-cmo-directives.md
examples/demo-band/.bands/suites/marcus-cmo/work/: launch-post-draft.md
examples/demo-band/.bands/suites/nadia-cto/: AGENTS.md  CLAUDE.md  HEARTBEAT.md  nadia-cto-directives.md
examples/demo-band/.bands/suites/nadia-cto/inbox/: 2026-06-16-1015-from-marcus-cmo.md
examples/demo-band/.bands/suites/priya-sdr/: AGENTS.md  CLAUDE.md  HEARTBEAT.md  priya-sdr-directives.md
src/bands/: __init__.py  cli.py  init.py  scaffold.py
src/bands/dashboard/: __init__.py  app.py  gh.py  workspace.py
src/bands/dashboard/static/: style.css
src/bands/dashboard/templates/: _suite_tabs.html  base.html  inbox.html  index.html  minutes.html  pulse.html  room.html  suite.html  tasks.html  work.html
src/bands/templates/: CLAUDE.md  EXPECTATIONS.md  HEURISTICS.md  IDENTITY.md  NORTH_STAR.md  OPERATING_MODES.md  PURPOSE.md  ceo-directives.md  employee-AGENTS.md  employee-CLAUDE.md  employee-HEARTBEAT.md  employee-directives.md
(+2 files in other folders)
