[project]
name = "bands"
version = "0.1.0"
description = "An opinionated framework for getting shit done with a band of AI agents"
requires-python = ">=3.11"
dependencies = [
    "click>=8.0",
    "jinja2>=3.0",
    "flask>=3.0",
    "markdown>=3.5",
    "pyyaml>=6.0.3",
]

[project.scripts]
bands = "bands.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bands"]
artifacts = [
    "src/bands/templates/**",
    "src/bands/dashboard/templates/**",
    "src/bands/dashboard/static/**",
]
